# adore_cli

./: .ci  .dockerignore  .gitignore  .gitmodules  .tests  Makefile  README.md  adore_cli.mk  adore_cli.yaml  ci.env  docker-compose.yaml  requirements.adore_cli.system
.github/workflows/: ci.yaml
docker/: Dockerfile.adore-cli  Dockerfile.adore_cli  Dockerfile.adore_cli_x11_display  Dockerfile.personalize.partial  Dockerfile.reown
docker/files/: .zshrc  install_foxglove_studio.sh  own.sh  requirements.adore_cli.pip3  requirements.adore_cli.ubuntu22.04.system  requirements.adore_cli_x11_display.ubuntu20.04.system  rsyslog.conf  start_foxglove_studio.sh
docker/files/foxglove_studio_config/sentry/: scope_v3.json  session.json
docker/files/foxglove_studio_config/studio-datastores/settings/: settings.json
tools/: adore-cli.sh  adore-cli_help.sh  adore_cli.sh  adore_cli_help.sh  git_repo_status.sh  requirements_file_change_status.sh  run_test_scenarios.sh  wait_for_plotlab_server.sh
tools/example_project/: Makefile
tools/example_project/ros2_workspace/ros2_hello_world/: CMakeLists.txt  build.sh  requirements.cmake  run.sh
tools/example_project/ros2_workspace/ros2_hello_world/src/ros2_hello_world/: README.md  package.xml
tools/example_project/ros2_workspace/ros2_hello_world/src/ros2_hello_world/src/: ros2_hello_world.cpp
